Codes in homepage displayed and logout feature enabled .(Completed the assignment)

--- a/FinalAssignment/Views/homePage.pug
+++ b/FinalAssignment/Views/homePage.pug
@@ -1,11 +1,13 @@
 doctype html
 html
     head
-        h1= OTP
+        
 body
     form(action="/OTP" id=otp)
         input(type="hidden" name="userId" value=userId)
         button(type="submit" id="generate") generate code
     form(action='/logout' id=logout)
         button(type="submit" id="login") logout
-            
+    var list = OTP
+    each item in OTP
+        li= item
